[package]
name = "secret_upload"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["multipart"] }
bytes = "1.11.1"
clap = { version = "4.6.0", features = ["derive"] }
futures-util = "0.3.32"
tokio = { version = "1.51.0", features = ["full"] }
tower = { version = "0.5.2", features = ["timeout"] }
tower-http = { version = "0.6.8", features = ["limit", "timeout"] }
local-ip-address = "0.6.3"

[profile.release]
opt-level = "z"      # Optimize for size
lto = true           # Enable Link Time Optimization
codegen-units = 1    # Reduce parallel code generation units for better optimization
panic = "abort"      # Remove panic unwinding code
strip = true         # Strip symbols from binary
